--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
         <meta charset="utf-8" />
-        <title>Demo app</title>
+        <link rel="apple-touch-icon" sizes="180x180" href='/static/favicon/apple-touch-icon.png'>
+        <link rel="icon" type="image/png" sizes="32x32" href='/static/favicon/favicon-32x32.png'>
+        <link rel="icon" type="image/png" sizes="16x16" href='/static/favicon/favicon-16x16.png'>
+        <link rel="manifest" href="/site.webmanifest">
+        <title>NFT Coffins</title>
     </head>
     <body>
         <!--        <div id="app"></div>-->
