--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html lang='en'>
     <head>
         <meta charset="utf-8" />
-        <link rel="apple-touch-icon" sizes="180x180" href='/static/favicon/apple-touch-icon.png'>
-        <link rel="icon" type="image/png" sizes="32x32" href='/static/favicon/favicon-32x32.png'>
-        <link rel="icon" type="image/png" sizes="16x16" href='/static/favicon/favicon-16x16.png'>
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href='images/favicon/apple-touch-icon.png'>
+        <link rel="icon" type="image/png" sizes="32x32" href='images/favicon/favicon-32x32.png'>
+        <link rel="icon" type="image/png" sizes="16x16" href='images/favicon/favicon-16x16.png'>
+        <link rel="manifest" href='site.webmanifest'>
         <title>NFT Coffins</title>
     </head>
     <body>
