--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="apple-touch-icon" sizes="180x180" href='images/favicon/apple-touch-icon.png'>
-        <link rel="icon" type="image/png" sizes="32x32" href='images/favicon/favicon-32x32.png'>
-        <link rel="icon" type="image/png" sizes="16x16" href='images/favicon/favicon-16x16.png'>
-        <link rel="manifest" href='site.webmanifest'>
+        <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+        <link rel="manifest" href="site.webmanifest" />
         <title>NFT Coffins</title>
     </head>
     <body>
-        <!--        <div id="app"></div>-->
+        <div id="app"></div>
     </body>
 </html>
