--- a/client/index.html
+++ b/client/index.html
@@ -13,5 +13,16 @@
     </head>
     <body>
         <div id="app"></div>
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0PHNH3QQFQ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-0PHNH3QQFQ')
+        </script>
     </body>
 </html>
