--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><base href="/"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png"/><link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png"/><link rel="manifest" href="site.webmanifest"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>NFT Coffins</title><link rel="icon" href="/favicon.ico"><script defer="defer" src="/main.js"></script></head><body><div id="app"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><base href="/"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png"/><link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png"/><link rel="manifest" href="site.webmanifest"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>NFT Coffins</title><link rel="icon" href="/favicon.ico"><script defer="defer" src="/main.js"></script></head><body><div id="app"></div><script async src="https://www.googletagmanager.com/gtag/js?id=G-0PHNH3QQFQ"></script><script>window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-0PHNH3QQFQ')</script></body></html>
